--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
   <h2>Welcome {{name}}</h2> -->
   
   <div class="main" ng-controller = "MyController">
+
+    <div class="search">
+        <h1>Artist Directory</h1>
+        <label>Search: </label>
+        <input placeholder="Search for artists" autofocus>
+    </div>
   	<ul class="artistlist">
-        <li class="artist cf" ng-repeat="item in artists">
+        <li class="artist cf" ng-repeat="item in artists | limitTo : 5">
             <img ng-src="images/{{item.shortname}}_tn.jpg" alt="Photo of {{item.name}}"/>
             <div class="info">
-                <h2>{{item.name}}</h2>
+                <h2>{{item.name | uppercase}}</h2>
                 <h3>{{item.reknown}}</h3>
             </div>
         </li>
