--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Angular Demo</title>
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular-route.js"></script>
+  <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <link rel="stylesheet" href="css/style.css">
 
@@ -12,36 +14,6 @@
   <!-- <input type="text" ng-model="name">
   <h2>Welcome {{name}}</h2> -->
   
-  <div class="main" ng-controller = "MyController">
-
-    <div class="search">
-        <h1>Artist Directory</h1>
-        <label>Search: </label>
-        <input ng-model="query" placeholder="Search for artists" autofocus>
-        <label class="formgroup">by:
-            <select ng-model="artistOrder">
-                <option value="name">Name</option>
-                <option value="reknown">Reknown</option>
-            </select>
-        </label>
-        <label class="formgroup">
-            <input type="radio" ng-model="direction" name="direction" checked>
-            ascending
-        </label>
-        <label class="formgroup">
-            <input type="radio" ng-model="direction" name="direction" value="reverse">
-            discending
-        </label>
-    </div>
-  	<ul class="artistlist">
-        <li class="artist cf" ng-repeat="item in artists | filter: query | orderBy: artistOrder:direction">
-            <img ng-src="images/{{item.shortname}}_tn.jpg" alt="Photo of {{item.name}}"/>
-            <div class="info">
-                <h2>{{item.name}}</h2>
-                <h3>{{item.reknown}}</h3>
-            </div>
-        </li>
-    </ul>
-  </div>
+  <div class="main" ng-view></div>
 </body>
 </html>
