--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Angular Demo</title>
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
+  <script src="lib/angular/angular-animate.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <link rel="stylesheet" href="css/style.css">
